--- a/package.json
+++ b/package.json
@@ -2,14 +2,42 @@
   "name": "sssom",
   "version": "0.0.1",
   "description": "Simple Standard for Sharing Ontology Mappings (SSOM) JavaScript library",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "Jakob Voß",
   "license": "MIT",
+  "homepage": "https://github.com/gbv/sssom-js#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gbv/sssom-js.git"
+  },
+  "type": "module",
+  "main": "index.js",
+  "files": [
+    "index.js",
+    "lib/",
+    "bin/"
+  ],
+  "bin": {
+    "sssom": "./bin/sssom.js"
+  },
+  "scripts": {
+    "test": "mocha",
+    "lint": "eslint",
+    "fix": "eslint --fix",
+    "release": "git checkout dev && git pull && npm test && npm version $SEMVER && git push && git checkout main && git merge dev && git push --follow-tags && git checkout dev",
+    "release:patch": "SEMVER=patch npm run release",
+    "release:minor": "SEMVER=minor npm run release",
+    "release:major": "SEMVER=major npm run release"
+  },
   "dependencies": {
     "yaml": "^2.7.1"
+  },
+  "engines": {
+    "node": ">= 18.0.0"
+  },
+  "devDependencies": {
+    "chai": "^5.2.0",
+    "eslint": "^9.23.0",
+    "eslint-config-gbv": "^2.6.0",
+    "mocha": "^11.1.0"
   }
 }
