--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "release:major": "SEMVER=major npm run release"
   },
   "dependencies": {
+    "@geneontology/curie-util-es5": "^1.2.4",
     "csv-parser": "^3.2.0",
     "yaml": "^2.7.1"
   },
