--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "sssom-js",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Simple Standard for Sharing Ontology Mappings (SSOM) JavaScript library",
-  "keywords": ["crosswalk", "concordance", "alignment", "jskos"],
+  "keywords": [
+    "crosswalk",
+    "concordance",
+    "alignment",
+    "jskos"
+  ],
   "author": "Jakob Voß",
   "license": "MIT",
   "homepage": "https://github.com/gbv/sssom-js#readme",
