--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   },
   "scripts": {
     "test": "mocha",
-    "lint": "eslint",
-    "fix": "eslint --fix",
+    "lint": "eslint *.js lib/ test/",
+    "fix": "eslint *.js lib/ test/ --fix",
+    "build": "webpack",
+    "docs": "http-server --cors -c-1 docs/",
     "release": "git checkout dev && git pull && npm test && npm version $SEMVER && git push && git checkout main && git merge dev && git push --follow-tags && git checkout dev",
     "release:patch": "SEMVER=patch npm run release",
     "release:minor": "SEMVER=minor npm run release",
@@ -46,6 +48,11 @@
     "chai": "^5.2.0",
     "eslint": "^9.23.0",
     "eslint-config-gbv": "^2.6.0",
-    "mocha": "^11.1.0"
+    "http-server": "^14.1.1",
+    "mocha": "^11.1.0",
+    "node-polyfill-webpack-plugin": "^4.1.0",
+    "process": "^0.11.10",
+    "webpack": "^5.99.8",
+    "webpack-cli": "^6.0.1"
   }
 }
