--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   },
   "scripts": {
     "test": "mocha",
-    "lint": "eslint *.js lib/ test/",
-    "fix": "eslint *.js lib/ test/ --fix",
+    "lint": "eslint *.js lib/ test/ docs/app.js",
+    "fix": "eslint *.js lib/ test/ docs/app.js --fix",
     "build": "webpack",
     "docs": "http-server --cors -c-1 docs/",
     "release": "git checkout dev && git pull && npm test && npm version $SEMVER && git push && git checkout main && git merge dev && git push --follow-tags && git checkout dev",
