--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint": "^9.23.0",
     "eslint-config-gbv": "^2.6.0",
     "http-server": "^14.1.1",
+    "jsonld2rdf": "^0.5.1",
     "mocha": "^11.1.0",
     "node-polyfill-webpack-plugin": "^4.1.0",
     "process": "^0.11.10",
