--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test": "mocha",
     "lint": "eslint *.js lib/ test/ docs/app.js",
     "fix": "eslint *.js lib/ test/ docs/app.js --fix",
-    "build": "webpack",
+    "build": "webpack; cp context.json docs/",
     "docs": "http-server --cors -c-1 docs/",
     "release": "git checkout dev && git pull && npm test && npm version $SEMVER && git push && git checkout main && git merge dev && git push --follow-tags && git checkout dev",
     "release:patch": "SEMVER=patch npm run release",
